<resources>
    <string name="app_name">Project2Java</string>
    <string name="aq_haveaccount">Already Have an Account?</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_murid">Login Murid</string>
    <string name="login_guru">Login Guru</string>
    <string name="password_forget">Lupa Password?</string>
    <string name="or">OR</string>
    <string name="register">New User? Register Here</string>
    <string name="week_mode">Week Mode</string>
    <string-array name="options">
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daftar">Daftar</string>
    <string name="text_kosong">Text Kosong</string>
    <string name="no_more_does">No More Does</string>
</resources>