<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F4F4F4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="198dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titlepage"
                android:text="@string/daftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textColor="#FFF"/>

            <TextView
                android:id="@+id/subtitlepage"
                android:text="@string/text_kosong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#4A4E6A"
                android:textAlignment="center"
                android:layout_marginTop="8dp"/>

            <View
                android:layout_marginTop="20dp"
                android:background="#131E69"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ourdoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-60dp"
        tools:listitem="@layout/item_does"/>


    <TextView
        android:id="@+id/endingpage"
        android:textAlignment="center"
        android:text="@string/no_more_does"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
